[package]
name = "a-tour-of-elm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs"] }

