[package]
name = "a-tour-of-elm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", feature = ["json"] }
mime = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs", "limit"] }
walkdir = "2.3.3"

